updated vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,10 @@
 {
     "version": 2,
+    "buildCommand": "npm run build",
     "builds": [
       {
         "src": "server/server.js",
         "use": "@vercel/node"
-      },
-      {
-        "src": "client/package.json",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "dist",
-          "buildCommand": "cd client && npm install && npm run build"
-        }
       }
     ],
     "routes": [
@@ -24,11 +17,11 @@
       },
       {
         "src": "/assets/(.*)",
-        "dest": "client/dist/assets/$1"
+        "dest": "server/public/assets/$1"
       },
       {
         "src": "/(.*)",
-        "dest": "client/dist/index.html"
+        "dest": "server/public/index.html"
       }
     ]
   }
